--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ function finishMarshall(q2){
 }
 
 /*************************************************
- * GPAQ — VERSION FONCTIONNELLE COMPLÈTE
+ * GPAQ
  *************************************************/
 function gpaqQ1(){
 render(`
@@ -125,80 +125,118 @@ render(`
 <button class="btn secondary" onclick="back()">Retour</button>
 `,10);
 }
-function gpaqQ2(){ render(`<p>Jours / semaine</p><input type="number" onchange="state.gpaq.wi_d=this.value"><button class="btn" onclick="gpaqQ3()">Continuer</button>`,20);}
-function gpaqQ3(){ render(`<p>Minutes / jour</p><input type="number" onchange="state.gpaq.wi_t=this.value"><button class="btn" onclick="gpaqQ4()">Continuer</button>`,30);}
-function gpaqQ4(){ render(`<p>Activité modérée au travail ?</p><button class="btn" onclick="state.gpaq.wm=1; gpaqQ5()">Oui</button><button class="btn" onclick="state.gpaq.wm=0; gpaqQ7()">Non</button>`,40);}
-function gpaqQ5(){ render(`<p>Jours / semaine</p><input type="number" onchange="state.gpaq.wm_d=this.value"><button class="btn" onclick="gpaqQ6()">Continuer</button>`,50);}
-function gpaqQ6(){ render(`<p>Minutes / jour</p><input type="number" onchange="state.gpaq.wm_t=this.value"><button class="btn" onclick="gpaqQ7()">Continuer</button>`,60);}
-function gpaqQ7(){ render(`<p>≥ 10 min à pied ou vélo ?</p><button class="btn" onclick="state.gpaq.tr=1; gpaqQ8()">Oui</button><button class="btn" onclick="state.gpaq.tr=0; gpaqQ10()">Non</button>`,70);}
-function gpaqQ8(){ render(`<p>Jours / semaine</p><input type="number" onchange="state.gpaq.tr_d=this.value"><button class="btn" onclick="gpaqQ9()">Continuer</button>`,75);}
-function gpaqQ9(){ render(`<p>Minutes / jour</p><input type="number" onchange="state.gpaq.tr_t=this.value"><button class="btn" onclick="gpaqQ10()">Continuer</button>`,80);}
-function gpaqQ10(){ render(`<p>Sports intenses ?</p><button class="btn" onclick="state.gpaq.li=1; gpaqQ11()">Oui</button><button class="btn" onclick="state.gpaq.li=0; gpaqQ13()">Non</button>`,85);}
-function gpaqQ11(){ render(`<p>Jours / semaine</p><input type="number" onchange="state.gpaq.li_d=this.value"><button class="btn" onclick="gpaqQ12()">Continuer</button>`,88);}
-function gpaqQ12(){ render(`<p>Minutes / jour</p><input type="number" onchange="state.gpaq.li_t=this.value"><button class="btn" onclick="gpaqQ13()">Continuer</button>`,90);}
-function gpaqQ13(){ render(`<p>Activités modérées loisirs ?</p><button class="btn" onclick="state.gpaq.lm=1; gpaqQ14()">Oui</button><button class="btn" onclick="state.gpaq.lm=0; gpaqQ16()">Non</button>`,92);}
-function gpaqQ14(){ render(`<p>Jours / semaine</p><input type="number" onchange="state.gpaq.lm_d=this.value"><button class="btn" onclick="gpaqQ15()">Continuer</button>`,94);}
-function gpaqQ15(){ render(`<p>Minutes / jour</p><input type="number" onchange="state.gpaq.lm_t=this.value"><button class="btn" onclick="gpaqQ16()">Continuer</button>`,96);}
-function gpaqQ16(){ render(`<p>Temps assis (min/jour)</p><input type="number" onchange="state.gpaq.sed=this.value"><button class="btn" onclick="finishGPAQ()">Terminer</button>`,98);}
+function gpaqQ2(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.wi_d=this.value"><button class="btn" onclick="gpaqQ3()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,20);}
+function gpaqQ3(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.wi_t=this.value"><button class="btn" onclick="gpaqQ4()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,30);}
+
+function gpaqQ4(){ render(`<h2>Travail – activité modérée</h2><p>Activité physique modérée au travail ?</p><button class="btn" onclick="state.gpaq.wm=1; gpaqQ5()">Oui</button><button class="btn" onclick="state.gpaq.wm=0; gpaqQ7()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,40);}
+function gpaqQ5(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.wm_d=this.value"><button class="btn" onclick="gpaqQ6()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,50);}
+function gpaqQ6(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.wm_t=this.value"><button class="btn" onclick="gpaqQ7()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,60);}
+
+function gpaqQ7(){ render(`<h2>Déplacements</h2><p>≥ 10 min à pied ou à vélo ?</p><button class="btn" onclick="state.gpaq.tr=1; gpaqQ8()">Oui</button><button class="btn" onclick="state.gpaq.tr=0; gpaqQ10()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,65);}
+function gpaqQ8(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.tr_d=this.value"><button class="btn" onclick="gpaqQ9()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,70);}
+function gpaqQ9(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.tr_t=this.value"><button class="btn" onclick="gpaqQ10()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,75);}
+
+function gpaqQ10(){ render(`<h2>Loisirs – activité intense</h2><p>Sports ou fitness intenses ?</p><button class="btn" onclick="state.gpaq.li=1; gpaqQ11()">Oui</button><button class="btn" onclick="state.gpaq.li=0; gpaqQ13()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,80);}
+function gpaqQ11(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.li_d=this.value"><button class="btn" onclick="gpaqQ12()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,82);}
+function gpaqQ12(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.li_t=this.value"><button class="btn" onclick="gpaqQ13()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,84);}
+
+function gpaqQ13(){ render(`<h2>Loisirs – activité modérée</h2><p>Activités modérées de loisirs ?</p><button class="btn" onclick="state.gpaq.lm=1; gpaqQ14()">Oui</button><button class="btn" onclick="state.gpaq.lm=0; gpaqQ16()">Non</button><button class="btn secondary" onclick="back()">Retour</button>`,86);}
+function gpaqQ14(){ render(`<p>Jours / semaine</p><input type="number" min="0" max="7" onchange="state.gpaq.lm_d=this.value"><button class="btn" onclick="gpaqQ15()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,88);}
+function gpaqQ15(){ render(`<p>Minutes / jour</p><input type="number" min="0" max="1440" onchange="state.gpaq.lm_t=this.value"><button class="btn" onclick="gpaqQ16()">Continuer</button><button class="btn secondary" onclick="back()">Retour</button>`,90);}
+
+function gpaqQ16(){ render(`<h2>Sédentarité</h2><p>Temps assis / couché (hors sommeil)</p><input type="number" min="0" max="1440" onchange="state.gpaq.sed=this.value"><button class="btn" onclick="finishGPAQ()">Terminer</button><button class="btn secondary" onclick="back()">Retour</button>`,92);}
 
 function finishGPAQ(){
   const wi=(state.gpaq.wi_d||0)*(state.gpaq.wi_t||0);
+  const li=(state.gpaq.li_d||0)*(state.gpaq.li_t||0);
   const wm=(state.gpaq.wm_d||0)*(state.gpaq.wm_t||0);
   const tr=(state.gpaq.tr_d||0)*(state.gpaq.tr_t||0);
-  const li=(state.gpaq.li_d||0)*(state.gpaq.li_t||0);
   const lm=(state.gpaq.lm_d||0)*(state.gpaq.lm_t||0);
+
   const MET = wi*8 + li*8 + (wm+tr+lm)*4;
   state.result.met=MET;
-  state.result.niveau = MET>=3000?"très_actif":MET>=600?"moyennement_actif":"insuffisamment_actif";
+
+  if(MET>=3000) state.result.niveau="très_actif";
+  else if(MET>=600) state.result.niveau="moyennement_actif";
+  else state.result.niveau="insuffisamment_actif";
+
   motivation();
 }
 
 /*************************************************
- * MOTIVATION — LOGIQUE CORRIGÉE
+ * MOTIVATION + EVA
  *************************************************/
 function motivation(){
   if(state.result.niveau!=="insuffisamment_actif"){
-    render(`
-    <p>Êtes-vous actif à ce niveau depuis plus de 6 mois ?</p>
+    render(`<p>Actif à ce niveau depuis plus de 6 mois ?</p>
     <button class="btn" onclick="state.result.stade='consolidation'; evaImp()">Oui</button>
     <button class="btn" onclick="state.result.stade='action'; evaImp()">Non</button>
-    `,99);
+    <button class="btn secondary" onclick="back()">Retour</button>`,94);
   } else {
-    render(`
-    <p>Envisagez-vous d’augmenter votre activité physique dans les 30 jours ?</p>
+    render(`<p>Augmenter l’activité dans les 30 jours ?</p>
     <button class="btn" onclick="state.result.stade='préparation'; evaImp()">Oui</button>
-    <button class="btn" onclick="motivation2()">Non</button>
-    `,99);
+    <button class="btn" onclick="state.result.stade='intention'; evaImp()">Non</button>
+    <button class="btn secondary" onclick="back()">Retour</button>`,94);
   }
 }
 
-function motivation2(){
-  render(`
-    <p>Avez-vous l’intention de vous engager dans une activité physique régulière dans les 6 mois ?</p>
-    <button class="btn" onclick="state.result.stade='intention'; evaImp()">Oui</button>
-    <button class="btn" onclick="state.result.stade='indétermination'; evaImp()">Non</button>
-  `,99);
+function evaImp(){
+render(`<p>Importance de l’activité physique (0–10)</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
+<div>5</div>
+<button class="btn" onclick="state.result.importance=document.querySelector('input').value; evaConfiance()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>`,97);
+}
+
+function evaConfiance(){
+render(`<p>Confiance pour maintenir ou augmenter votre activité (0–10)</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
+<div>5</div>
+<button class="btn" onclick="state.result.confiance=document.querySelector('input').value; final()">Terminer</button>
+<button class="btn secondary" onclick="back()">Retour</button>`,99);
 }
 
 /*************************************************
- * EVA + FIN
+ * RÉSULTAT FINAL
  *************************************************/
-function evaImp(){
-render(`<p>Importance (0–10)</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
-<div>5</div>
-<button class="btn" onclick="state.result.importance=document.querySelector('input').value; evaConfiance()">Continuer</button>`,100);
-}
-function evaConfiance(){
-render(`<p>Confiance (0–10)</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
-<div>5</div>
-<button class="btn" onclick="state.result.confiance=document.querySelector('input').value; final()">Terminer</button>`,100);
-}
 function final(){
-render(`<h2>Fin</h2><pre>${JSON.stringify(state.result,null,2)}</pre>`,100,false);
+let html=`<h2>Conclusion</h2>
+<p><strong>Niveau d’activité :</strong> ${state.result.niveau.replace("_"," ")}
+${state.result.met?` (${state.result.met} MET-min/semaine)`:""}
+${state.result.marshall_score!==undefined?` (score ${state.result.marshall_score})`:""}</p>
+
+<h3>Détails du questionnaire</h3>`;
+
+if(state.tool==="gpaq"){
+html+=`
+<div class="section"><strong>Travail – activité intense</strong><div class="answer">${state.gpaq.wi?`Oui — ${state.gpaq.wi_d} j/semaine, ${state.gpaq.wi_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Travail – activité modérée</strong><div class="answer">${state.gpaq.wm?`Oui — ${state.gpaq.wm_d} j/semaine, ${state.gpaq.wm_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Déplacements</strong><div class="answer">${state.gpaq.tr?`Oui — ${state.gpaq.tr_d} j/semaine, ${state.gpaq.tr_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Loisirs – activité intense</strong><div class="answer">${state.gpaq.li?`Oui — ${state.gpaq.li_d} j/semaine, ${state.gpaq.li_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Loisirs – activité modérée</strong><div class="answer">${state.gpaq.lm?`Oui — ${state.gpaq.lm_d} j/semaine, ${state.gpaq.lm_t} min/jour`:"Non"}</div></div>
+<div class="section"><strong>Comportement sédentaire</strong><div class="answer">${state.gpaq.sed} min/jour</div></div>
+`;
+}
+
+if(state.tool==="marshall"){
+html+=`
+<div class="section"><strong>Marshall – question 1</strong><div class="answer">${state.marshall.q1}</div></div>
+<div class="section"><strong>Marshall – question 2</strong><div class="answer">${state.marshall.q2}</div></div>
+`;
+}
+
+html+=`
+<div class="section"><strong>Stade motivationnel</strong><div class="answer">${state.result.stade}</div></div>
+<div class="section"><strong>Importance (0–10)</strong><div class="answer">${state.result.importance}</div></div>
+<div class="section"><strong>Confiance (0–10)</strong><div class="answer">${state.result.confiance}</div></div>
+
+<button class="btn secondary" onclick="back()">Retour</button>
+<button class="btn secondary" onclick="location.reload()">Recommencer</button>
+
+<p class="footer">Outil d’aide à la consultation médicale.</p>
+`;
+
+render(html,100,false);
 }
 </script>
 </body>
